# fun-api

./: Dockerfile  LICENSE  Makefile  README.md  deployment.yaml  docker-compose.yaml  fun_api.yaml  pyproject.toml
.github/scripts/: scrape_workflow_info.py
.github/workflows/: ci.yml  deploy.yml
fun_api/: main.py
